--- a/front-ai/src/assets/scss/layout/content_style.scss
+++ b/front-ai/src/assets/scss/layout/content_style.scss
@@ -1,7 +1,7 @@
 .content-layout {
     .layout {
         min-height: 100vh;
-        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../../img/back2.webp");
+        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../../img/back5.jpg");
         background-repeat: repeat-y;
         background-size: cover;
     }
