--- a/front-ai/src/assets/scss/layout/home_style.scss
+++ b/front-ai/src/assets/scss/layout/home_style.scss
@@ -5,7 +5,7 @@
     width: 100vw;
     min-height: 100vh;
     // background: linear-gradient(#415a77 50%, #415a77 20%, #e1e1deff 20%, #e1e1deff 100%);
-    background-image: url("../../img/back3.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../../img/back4.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
